Criando e alterando components

--- a/UC7/segundo-react/src/App.css
+++ b/UC7/segundo-react/src/App.css
@@ -1,3 +1,4 @@
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -49,4 +50,9 @@
   max-width: 70vw;
   border: solid black 2px;
   border-radius: 10px;
+  
+}
+
+ul {
+  list-style:none;
 }
