--- a/UC7/segundo-react/src/App.css
+++ b/UC7/segundo-react/src/App.css
@@ -1,11 +1,9 @@
-
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
-
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -50,7 +48,7 @@
   max-width: 70vw;
   border: solid black 2px;
   border-radius: 10px;
-  
+  margin-bottom: 10vh;
 }
 
 ul {
