--- a/UC7/segundo-react/src/App.css
+++ b/UC7/segundo-react/src/App.css
@@ -46,9 +46,10 @@
   overflow-y: scroll;
   min-width: 70vw;
   max-width: 70vw;
-  border: solid black 2px;
+  border: solid #fff 2px;
   border-radius: 10px;
   margin-bottom: 10vh;
+  padding: 50px;
 }
 
 ul {
