--- a/UC7/segundo-react/src/App.css
+++ b/UC7/segundo-react/src/App.css
@@ -4,6 +4,33 @@
   padding: 2rem;
   text-align: center;
 }
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
 
 .card {
   padding: 2em;
@@ -19,12 +46,26 @@
   overflow-y: scroll;
   min-width: 70vw;
   max-width: 70vw;
-  border: solid #fff 2px;
+  border: solid black 2px;
   border-radius: 10px;
   margin-bottom: 10vh;
-  padding: 50px;
 }
 
 ul {
   list-style:none;
+}
+
+.menu {
+  position: fixed;
+  width: 70vw;
+  top:0px;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #e6dcdc;
+}
+.menu a {
+
+  margin: 20px;
 }
